[package]
name = "brdiff"
version = "0.1.0"
authors = ["smudge <nathan@ngriffith.com>"]
edition = "2018"
categories = ["command-line-utilities", "multimedia::images"]
description = "A command-line tool for subtracting images to generate a new blue-red difference image."
repository = "https://github.com/smudge/brdiff"
license = "MIT"

[dependencies]
image = "0.23"
